--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -603,12 +603,16 @@
 <p>Here are some more vocabulary words having to do with travel.</p>
 
 <ul class="vocab-list">
-<li><b>ara</b> <i>prep.</i> “beside, next to, by”</li>
+<li><b>ara</b> <i>prep.</i> “beside, next to, by” ¹</li>
 <li><b>mallë</b> <i>n.</i> “street”</li>
 <li><b>men</b> <i>n.</i> “way”</li>
 <li><b>raxa</b> <i>n.</i> “wagon”</li>
 <li><b>tië</b> <i>n.</i> “path, road”</li>
 <li><b>yanta</b> <i>n.</i> “bridge”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The preposition <i>ara</i> only takes this form if the following word begins with a consonant. If the word begins with a vowel it becomes <i>ar’</i>. This is especially true of the frequent combination <i>ar’ i</i> “beside the”.  This is the same phenomenon (elision) we saw with <i>elen síla lumenn’ omentielvo</i> from Chapter 1, and it will be discussed in detail in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</li>
 </ul>
 
 <p>Here are some travel-related verbs, some of which we’ve seen before.</p>
@@ -659,9 +663,7 @@
 <li><i>tulya-</i> “to bring, lead”: <i>i elda tulya i atan</i> “the elf brings/leads the man”, <i>i elda tulyëa i atan</i> “the elf is bringing/leading the man”, <i>i elda tulyanë i atan</i> “the elf brought/led the man”.</li>
 </ul>
 
-<p></p>
-
-<p><a id="c2-2-5-2"></a><b>2.2.5.2 Verbs of Location:</b> The other verbs in the above list have to do with being in a particular location. The verbs <i>har-</i>/<i>haru-</i> and <i>tar-</i>/<i>tolu-</i> are in pairs: <i>har-</i> “to sit” vs. <i>haru-</i> “sit down” (= begin to sit); <i>tar-</i> “to stand” vs. <i>tolu-</i> “stand up” (= begin to stand); the forms of <i>tar-</i> and <i>tolu-</i> are more distinct because they are based on different verbal roots (TAR “stand” and TOL “stick up”). The verbs <i>har-</i> “sit” and <i>tar-</i> “stand” can also be applied to geographic features as appropriate based on verticality: <i>i osto harë</i> “the city sits” but <i>i oron tarë</i> “the mountain stands”. Flat geographic features use the verb <i>lat-</i> “extend, be situated”, which basically means “lie” but used only of places: <i>i sírë latë ara i ambo</i> “the river lies (is situated) beside the hill”. The other Quenya verb for “lie” is <i>caita-</i> “lie (down)” which is not used for places but rather for one thing lying on another: <i>i atan caita</i> “the man lies (down)”. It is mostly used of lying people and animals, though it can be used of a thing lying on another thing as well.</p>
+<p><a id="c2-2-5-2"></a><b>2.2.5.2 Verbs of Location:</b> The other verbs in the above list have to do with being in a particular location. The verbs <i>har-</i>/<i>haru-</i> and <i>tar-</i>/<i>tolu-</i> are in pairs: <i>har-</i> “to sit” vs. <i>haru-</i> “sit down” (= begin to sit); <i>tar-</i> “to stand” vs. <i>tolu-</i> “stand up” (= begin to stand); the forms of <i>tar-</i> and <i>tolu-</i> are more distinct because they are based on different verbal roots (TAR “stand” and TOL “stick up”). The verbs <i>har-</i> “sit” and <i>tar-</i> “stand” can also be applied to geographic features as appropriate based on verticality: <i>i osto harë</i> “the city sits” but <i>i oron tarë</i> “the mountain stands”. Flat geographic features use the verb <i>lat-</i> “extend, be situated”, which basically means “lie” but used only of places: <i>i sírë latë ar’ i ambo</i> “the river lies (is situated) beside the hill”. The other Quenya verb for “lie” is <i>caita-</i> “lie (down)” which is not used for places but rather for one thing lying on another: <i>i atan caita</i> “the man lies (down)”. It is mostly used of lying people and animals, though it can be used of a thing lying on another thing as well.</p>
 
 <p>The verb <i>har-</i> means “stay” as well as “sit”, so if an Elf says <i>á harë mecin</i> “sit/stay please”, they are probably asking you to stay for a while. If they want you to sit down, they would say <i>á haru mecin</i> “sit down please” (these are imperative phrases, which will be discussed in <a href="eldamo-intro-quenya-03.html">Chapter 3</a>). The verb <i>ser-</i> means “rest”, but it can also be used in the sense of “stay for a time” = “tarry”: <i>i atan séra i tauressë</i> “the man rests/tarries in the forest”. For someone staying or dwelling in a place more permanently, the correct verb is <i>mar-</i> “dwell, abide, live”: <i>i atan marë i ostossë</i> “the man dwells/lives in the city”. The verb <i>mar-</i> only means “live” in the sense “live in a place”; the general verb for being alive is <i>coita-</i>: <i>eldar coitar anda</i> “Elves live long (= for a long time)”.</p>
 
@@ -819,7 +821,7 @@
 <li><i>Mallë tulya ni i mindonello.</i></li>
 <li><i>I noirë harë ambossë.</i></li>
 <li><i>Nauco hárua cöalyassë</i> or <i>mi cöalya</i>.</li>
-<li><i>I mindon tára ara ailin.</i></li>
+<li><i>I mindon tára ar’ ailin.</i></li>
 <li><i>I aran lendë Endorenna.</i> ²</li>
 </ol>
 
@@ -838,7 +840,7 @@
 <li><span class="transcribe" data-lang="q" data-value="Mallë tulya ni i mindonello">Mallë tulya ni i mindonello</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I noirë harë ambossë">I noirë harë ambossë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Nauco hárua cöalyassë">Nauco hárua cöalyassë</span> or <span class="transcribe" data-lang="q" data-value="mi cöalya">mi cöalya</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I mindon tára ara ailin">I mindon tára ara ailin</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I mindon tára ar’ ailin">I mindon tára ar’ ailin</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I aran lendë Endorenna">I aran lendë Endorenna</span></li>
 </ol>
 
@@ -875,10 +877,10 @@
 <p><a id="c2-3-1-2"></a><b>2.3.1.2 <i>ná-</i> Conjugations:</b> Here is how <i>ná-</i> is conjugated in the major Quenya verb tenses:</p>
 
 <ul>
-<li><b>Aorist/present:</b> <i>ná</i> “is/am/are”</li>
-<li><b>Future:</b> <i>nauva</i> “will be”</li>
+<li><b>Aorist/Present:</b> <i>ná</i> “is/am/are”</li>
 <li><b>Past:</b> <i>nánë</i> “was/were”</li>
 <li><b>Perfect:</b> <i>anaië</i> “has/have been”</li>
+<li><b>Future:</b> <i>nauva</i> “will be”</li>
 </ul>
 
 <p>We haven’t fully discussed the future and perfect tenses yet, but their meaning should be clear. The verb <i>ná-</i> is somewhat unusual in that it doesn’t distinguish between the aorist and present tenses; the simple stem <i>ná</i> is used for both timeless statements and statements about the present.</p>
@@ -974,7 +976,7 @@
 <p><a id="c2-3-2-2"></a><b>2.3.2.2 <i>ëa-</i> Conjugations:</b> Here is how <i>ëa-</i> is conjugated in the major Quenya verb tenses. Like <i>ná-</i>, this verb uses the same form for both the aorist and present tenses (VT49/29):</p>
 
 <ul>
-<li><b>Aorist/present:</b> <i>ëa</i> “exists”</li>
+<li><b>Aorist/Present:</b> <i>ëa</i> “exists”</li>
 <li><b>Future:</b> <i>euva</i> “will exist”</li>
 <li><b>Past:</b> <i>engë</i> “existed”</li>
 <li><b>Perfect:</b> <i>engië</i> “has existed”, archaic †<i>éye</i> ¹.</li>
@@ -994,16 +996,16 @@
 
 <ul>
 <li><i>Elerondo Endoressë</i> “Elrond [is] in Middle-earth”.</li>
-<li><i>I sírë ara i oron (ná)</i> “The river [is] by the mountain”.</li>
-<li><i>I osto (ná) ara i sírë</i> “The city [is] by the river”.</li>
+<li><i>I sírë ar’ i oron (ná)</i> “The river [is] by the mountain”.</li>
+<li><i>I osto (ná) ar’ i sírë</i> “The city [is] by the river”.</li>
 </ul>
 
 <p>As usual, with more complex expressions the <i>ná</i> is more likely to be (re)introduced. Where a verb is required, Quenya still prefers to avoid <i>ná</i>, using an alternate verb where possible as described in the section on <a href="#c2-2-5-2">2.2.5.2 Verbs of Location</a>:</p>
 
 <ul>
 <li><i>Elerondo marë Endoressë</i> “Elrond dwells in Middle-earth”.</li>
-<li><i>I sírë latë ara i oron</i> “The river lies by the mountain”.</li>
-<li><i>I osto harë ara i sírë</i> “The city sits by the river”.</li>
+<li><i>I sírë latë ar’ i oron</i> “The river lies by the mountain”.</li>
+<li><i>I osto harë ar’ i sírë</i> “The city sits by the river”.</li>
 </ul>
 
 <h2><a id="c2-3-3"></a>2.3.3 Vocabulary: People and Attributes</h2>
@@ -1081,10 +1083,10 @@
 <li>The verb <i>ná-</i> is used to equate a (pro)noun to a noun or adjective like English “to be”.</li>
 <li>The basic conjugation of <i>ná-</i> is:
 <ul>
-<li><b>Aorist/present:</b> <i>ná</i> “is/am/are”</li>
-<li><b>Future:</b> <i>nauva</i> “will be”</li>
+<li><b>Aorist/Present:</b> <i>ná</i> “is/am/are”</li>
 <li><b>Past:</b> <i>nánë</i> “was/were”</li>
 <li><b>Perfect:</b> <i>anaië</i> “has/have been”</li>
+<li><b>Future:</b> <i>nauva</i> “will be”</li>
 </ul></li>
 <li>The aorist/present form <i>ná</i> favors the long forms of pronoun suffixes (<i>nanyë, nalyë</i>) except for <i>nás</i> “he/she/it is”.</li>
 <li>The verb <i>ná</i> can appear in various places in a phrase:
@@ -1104,7 +1106,7 @@
 <li>The verb <i>ëa-</i> equivalent to English “exist” and can only be followed by adverbs (usually of time) or prepositional expressions.</li>
 <li>The basic conjugation of <i>ëa-</i> is:
 <ul>
-<li><b>Aorist/present:</b> <i>ëa</i> “exists”</li>
+<li><b>Aorist/Present:</b> <i>ëa</i> “exists”</li>
 <li><b>Future:</b> <i>euva</i> “will exist”</li>
 <li><b>Past:</b> <i>engë</i> “existed”</li>
 <li><b>Perfect:</b> <i>engië</i> “has existed”, archaic †<i>éye</i>.</li>
@@ -1156,7 +1158,7 @@
 <li><i>I netti náner márë meldi.</i></li>
 <li><i>Nanyë lenca sí.</i></li>
 <li><i>Nauval qualin.</i></li>
-<li><i>I raica sírë i celu ara i osto núra ná.</i></li>
+<li><i>I raica sírë i celu ar’ i osto núra ná.</i></li>
 <li><i>I aiwi i atani fárëar lintë nár.</i></li>
 <li><i>Quilda ná.</i></li>
 </ol>
@@ -1701,7 +1703,7 @@ Out of the Great Sea to Middle-earth I am come.<br/>
 In this place will I abide, and my heirs, unto the ending of the world.
 </blockquote>   
 
-<p>As with Frodo’s greeting, the actual Elvish phrase published in <i>The Lord of the Rings</i> shows some elision (vowel loss): <i>tenn’ Ambar-metta</i> rather than <i>tenna Ambar-metta</i> as given above. Also note how the long vowel of <i>Endórë</i> shortens when the directional case suffix <i>-nna</i> is added: <i>Endorenna</i>, not **<i>Endórenna</i>. These subtle vowel shifts will be discussed in <a href="eldamo-intro-quenya-05.html">Chapter 5</a>.</p>
+<p>As with Frodo’s greeting, the actual Elvish phrase published in <i>The Lord of the Rings</i> shows some elision (vowel loss): <i>tenn’ Ambar-metta</i> rather than <i>tenna Ambar-metta</i> as given above. Also note how the long vowel of <i>Endórë</i> shortens when the directional case suffix <i>-nna</i> is added: <i>Endorenna</i>, not **<i>Endórenna</i>. These subtle vowel shifts will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
 
 <p>The last complicated bit for this analysis is <i>hildinyar</i> “my heirs”. Based on #<i>hildë</i> “heir” and the rules described so far, the expected form would be <i>hildenyar</i>. There are a few of possible explanations, all of them quite technical. For this reason, we are deferring a discussion of <i>hildinyar</i> vs. <i>hildenyar</i> until <a href="eldamo-intro-quenya-07.html">Chapter 7</a> when we discuss the possessive pronouns.</p>
 
@@ -1744,13 +1746,13 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>Tolkien’s later work on his languages is therefore of a curious character. He continued to innovate and refine the features of the Elvish languages, but he also spent time figuring out how to make those features compatible with his already-published works. Like <i>The Silmarillion</i>, Tolkien never produced a “finished” version of his Elvish languages, and his work on the languages was continued until it was interrupted by his death in 1973.</p>
 
-<p><b><a id="c2-7-4"></a> 2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle Earth</i> series was published in 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
+<p><a id="c2-7-4"></a><b>2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle Earth</i> series was published in 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
 
 <p>With the publication of <i>The Etymologies</i> in 1987, and <i>Words, Phrases and Passages</i> twenty years later in 2007, students of Elvish were finally able to build a picture of how Tolkien imagined Elvish in the period before and after the publication of <i>The Lord of the Rings</i>. As more information became available, however, the fundamentally incomplete nature of the Elvish languages became clear. While some of his ideas about the Elvish languages were quite stable, there were other areas where Tolkien kept changing his mind. Figuring out which of his ideas were compatible with others can be very challenging, and almost always involves some degree of guesswork. This isn’t necessarily a problem for those involved in the pure academic study of Tolkien’s languages, but for those who actually want to <u>use</u> Quenya to craft compositions of their own, it can be a big problem.</p>
 
 <p>That is especially the case when presenting Quenya to relative beginners, as this course aims to do. To avoid this issue, most Quenya courses (including this one) present a simplified version of the Elvish languages to make it easier for students to grasp. Such “post-Tolkien” renditions of Elvish are usually referred to as Neo-Quenya, and they gloss over the messier details and contradictions of the source material. You can’t reasonably expect the student to grasp the complexity of sixty years of worth of evolution for Tolkien’s languages when they are still wrestling with basic grammar.</p>
 
-<p><b><a id="c2-7-5"></a> 2.7.5 More on Neologisms:</b> One common feature of Neo-Quenya is the use of neologisms, or fan-invented words that “fill in the gaps” of the Elvish languages as described by Tolkien. Not every neologism represents a new concept. For example, we don’t know the past tense of every Quenya verb and sometimes we need to guess, such as assuming the past tense of <i>mar-</i> “to dwell” is *<i>marnë</i> “dwelled”. Strictly speaking these are neologisms as well. However, when most people think of neologisms, they think of words that add new concepts to the Elvish languages, such !<i>nil-</i> “to love (less emotionally)” or !<i>orendë</i> “nuclear family”.</p>
+<p><a id="c2-7-5"></a><b>2.7.5 More on Neologisms:</b> One common feature of Neo-Quenya is the use of neologisms, or fan-invented words that “fill in the gaps” of the Elvish languages as described by Tolkien. Not every neologism represents a new concept. For example, we don’t know the past tense of every Quenya verb and sometimes we need to guess, such as assuming the past tense of <i>mar-</i> “to dwell” is *<i>marnë</i> “dwelled”. Strictly speaking these are neologisms as well. However, when most people think of neologisms, they think of words that add new concepts to the Elvish languages, such !<i>nil-</i> “to love (less emotionally)” or !<i>orendë</i> “nuclear family”.</p>
 
 <p>The exercises in this course avoid using neologisms, but not because neologisms are inherently bad. A lot of new students have a strong desire to “use only words that Tolkien used”, but the reality is that it is only a matter of time before you run into something that Tolkien didn’t have a word for, especially if you want to talk about modern things like computers or automobiles. At that point your choices are (a) don’t say anything at all, (b) use some complex circumlocution to get around the missing word or (c) coin some neologism. However, different people have varying levels of tolerance for neologisms (and different kinds of neologism), so you will likely see some disagreements on what is the best way of translating a particular phrase.</p>
 </div>
@@ -1800,7 +1802,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <ul class="vocab-list">
 <li><b>anya-</b> <i>v.</i> “to arrive”
 <ul><li><i>pa.t.</i> *<b>ananyë</b> “arrived”</li></ul></li>
-<li><b>ara</b> <i>prep.</i> “beside, next to, by”</li>
+<li><b>ara</b> <i>prep.</i> “beside, next to, by” ¹</li>
 <li><b>auta-</b> <i>v.</i> “to go (away), depart”
 <ul><li><i>pa.t.</i> <b>vánë</b> “went (away), departed”</li></ul></li>
 <li><b>har-</b> <i>v.</i> “to sit, stay”
@@ -1834,6 +1836,10 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>tulya-</b> <i>v.</i> “to bring, *lead”
 <ul><li><i>pa.t.</i> <b>tulyanë</b> “brought, led”</li></ul></li>
 <li><b>yanta</b> <i>n.</i> “bridge”</li>
+</ul>
+
+<ul>
+<li>Note ¹: The preposition <i>ara</i> only takes this form if the following word begins with a consonant. If the word begins with a vowel it becomes <i>ar’</i>. This is especially true of the frequent combination <i>ar’ i</i> “beside the”.  This is the same phenomenon (elision) we saw with <i>elen síla lumenn’ omentielvo</i> from Chapter 1, and it will be discussed in detail in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</li>
 </ul>
 
 <p><b><u>People:</u></b></p>
@@ -2090,10 +2096,10 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <ul>
 <li><u><b><i>ná-</i>:</b></u> The verb <i>ná-</i> is used to equate a (pro)noun to a noun or adjective like English “to be”.
 <ul>
-<li><b>Aorist/present:</b> <i>ná</i> “is/am/are”</li>
-<li><b>Future:</b> <i>nauva</i> “will be”</li>
+<li><b>Aorist/Present:</b> <i>ná</i> “is/am/are”</li>
 <li><b>Past:</b> <i>nánë</i> “was/were”</li>
 <li><b>Perfect:</b> <i>anaië</i> “has/have been”</li>
+<li><b>Future:</b> <i>nauva</i> “will be”</li>
 </ul></li>
 <li>The aorist/present form <i>ná</i> favors the long forms of pronoun suffixes (<i>nanyë, nalyë</i>) except for <i>nás</i> “he/she/it is”.</li>
 <li>The verb <i>ná</i> can appear in various places in a phrase:
@@ -2107,7 +2113,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 </ul></li>
 <li><u><b><i>ëa-</i>:</b></u> The verb <i>ëa-</i> equivalent to English “exist” and can only be followed by adverbs (usually of time) or prepositional expressions.
 <ul>
-<li><b>Aorist/present:</b> <i>ëa</i> “exists”</li>
+<li><b>Aorist/Present:</b> <i>ëa</i> “exists”</li>
 <li><b>Future:</b> <i>euva</i> “will exist”</li>
 <li><b>Past:</b> <i>engë</i> “existed”</li>
 <li><b>Perfect:</b> <i>engië</i> “has existed”, archaic †<i>éye</i>.</li>
