--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -115,7 +115,7 @@
 
 <blockquote>HY has the same relation to <i>y</i> as HW to <i>w</i>, and represents a sound like that often heard in English “hew, huge”; <i>h</i> in Quenya <i>eht, iht</i> had the same sound.</blockquote>
 
-<p>These sounds appear in words like <i>hwesta</i> “breeze” and <i>hyarmen</i> “south”. The English words “hew, huge” are pretty good approximations of <i>hy</i>. The English word “white” is a less-good approximation of <i>hw</i>. When Tolkien said <i>hw</i> should use the “northern pronunciation” he meant it was a more frictional sound like in Scots English (IPA [xʷ]) rather than truly voiceless “w” (IPA [w̥]). Try pronouncing it more like “hw” than “wh”, emphasizing the “h” sound.</p>
+<p>These sounds appear in words like <i>hwesta</i> “breeze” and <i>hyarmen</i> “south”. The English words “hew, huge” are pretty good approximations of <i>hy</i>. The English word “white” is a less-good approximation of <i>hw</i>. When Tolkien said <i>hw</i> should use the “northern pronunciation” it seems he meant it was a more frictional sound like in Scots English (IPA [xʷ]) rather than truly voiceless “w” (IPA [w̥]). Try pronouncing it more like “hw” than “wh”, emphasizing the “h” sound.</p>
 
 <p>As for <i>h</i> itself, Tolkien said:</p>
 
@@ -281,7 +281,7 @@
 <li><b><a href="#c3-1-4-2">3.1.4.2 Dative and Instrumental Basics</a></b></li>
 </ul>
 
-<p><b><a id="c3-1-4-1"></a>3.1.4.1 Consonant Pronunciation Summary:</b> Quenya consonants are mostly pronounced like in English, except:</p>
+<p><a id="c3-1-4-1"></a><b>3.1.4.1 Consonant Pronunciation Summary:</b> Quenya consonants are mostly pronounced like in English, except:</p>
 
 <ul>
 <li><i>c</i> is always a “hard c” [k].</li>
@@ -295,7 +295,7 @@
 </ul></li>
 </ul>
 
-<p><b><a id="c3-1-4-2"></a>3.1.4.2 Dative and Instrumental Basics:</b></p>
+<p><a id="c3-1-4-2"></a><b>3.1.4.2 Dative and Instrumental Basics:</b></p>
 
 <ul>
 <li><b>Dative:</b> Dative is used for the indirect object of a verb, with the suffix <i>-(e)n</i> in the singular, usually translated in English as “to” or “for”.<ul>
@@ -530,7 +530,7 @@
 <li><b>fëa</b> <i>n.</i> “spirit, soul”</li>
 <li><b>lairë</b> <i>n.</i> “poem”</li>
 <li><b>lilta-</b> <i>v.</i> “to dance”
-<ul><li><i>pa.t.</i> *<b>liltanë</b> “dance”</li></ul></li>
+<ul><li><i>pa.t.</i> *<b>liltanë</b> “danced”</li></ul></li>
 <li><b>lindalë</b> <i>n.</i> “music”</li>
 <li><b>lindo</b> <i>n.</i> “singer”</li>
 <li><b>lir-</b> <i>v.</i> “to sing”
@@ -813,7 +813,7 @@
 <p>The use of the future is also straightforward: it is used for events that will (or could) occur in the future: <i>cenuvan i aran enar</i> “I will see the king tomorrow”.</p>
 
 <div class="advanced-topic">
-<p><b><a id="c3-4-2-1"></a>3.4.2.1 How do we know this?</b> Tolkien discussed the future several times (PE22/104-105; PE22/131-132; PE22/167-168) and its basic formation and function seems to have been stable in the 1950s and 60s, though Tolkien vacillated on its ancient origins. The tense formations described here are a mixture of forms from 1948 (for the u-stem verb: PE22/117) and 1969 (PE22/152, 155), glossing over some complexities with the causative verbs, a verb class discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>.</p>
+<p><a id="c3-4-2-1"></a><b>3.4.2.1 How do we know this?</b> Tolkien discussed the future several times (PE22/104-105; PE22/131-132; PE22/167-168) and its basic formation and function seems to have been stable in the 1950s and 60s, though Tolkien vacillated on its ancient origins. The tense formations described here are a mixture of forms from 1948 (for the u-stem verb: PE22/117) and 1969 (PE22/152, 155), glossing over some complexities with the causative verbs, a verb class discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>.</p>
 </div>
 
 <h2><a id="c3-4-2"></a>3.4.2 Commands and Requests</h2>
@@ -831,7 +831,7 @@
 <p>Just because <i>á</i> is used for commands doesn’t mean it is overbearing in tone, any more than it is overbearing to say “help me out” in English. However, various formations can be used to soften the tone of a command, especially the word <i>mecin</i> “please”, just like in English: <i>á tulë, mecin</i> “come, please” (PE22/166). Also like English, a question can be used in place of a command to further soften the request: <i>ma tuluval enar, mecin</i> “will you come tomorrow, please?” (PE22/106).</p>
 
 <div class="advanced-topic">
-<p><b><a id="c3-4-2-1"></a>3.4.2.1 How do we know this?</b> The discussion above on imperatives draws from several sources. The most complete discussion of the imperative appears in the <i>Common Eldarin: Verb Structure</i> from the early 1950s (PE22/139-140). Strictly speaking, this discussion is about ancient Elvish, not Quenya, but a similar discussion appears in <i>Quenya Verbal System</i> (PE22/105-106) which indicates these ancient formations still apply to modern Quenya. The note on stress for suffixed imperatives is drawn from a single example: “<i>avá</i> stressed on the last syllable” (WJ/371), but it seems reasonable to assume this stress pattern applies to other suffixed imperatives.</p>
+<p><a id="c3-4-2-1"></a><b>3.4.2.1 How do we know this?</b> The discussion above on imperatives draws from several sources. The most complete discussion of the imperative appears in the <i>Common Eldarin: Verb Structure</i> from the early 1950s (PE22/139-140). Strictly speaking, this discussion is about ancient Elvish, not Quenya, but a similar discussion appears in <i>Quenya Verbal System</i> (PE22/105-106) which indicates these ancient formations still apply to modern Quenya. The note on stress for suffixed imperatives is drawn from a single example: “<i>avá</i> stressed on the last syllable” (WJ/371), but it seems reasonable to assume this stress pattern applies to other suffixed imperatives.</p>
 </div>
 
 <h2><a id="c3-4-3"></a>3.4.3 Wishes</h2>
@@ -857,7 +857,7 @@
 <p>While <i>nai</i> is used with the future, it is occasionally used with the present when wishing for a current state, as in <i>nai Eru mantëa tye</i> “may God bless you, (lit.) may it be that God is blessing you [now]”, with the verb <i>manta-</i> “to bless” (PE17/75). This “present wish” is especially common with “to be” statements, where the verb <i>ná</i> is usually omitted: <i>nai hínalya alassëa</i> “may your child [be] happy” (VT49/41). But <i>nai</i> is not used with past statements, since this veers into the realm of hypotheticals as discussed in <a href="eldamo-intro-quenya-11.html">Chapter 11</a>.</p>
 
 <div class="advanced-topic">
-<p><b><a id="c3-4-3-1"></a>3.4.3.1 How do we know this?</b> As with the discussion on imperatives, the above draws on several sources, but is based largely on an article on “Five Late Quenya Volitive Inscriptions” written by Carl Hostetter in 2007 where the <i>nai</i> construction was described by Hostetter in detail (VT49/38-48). This <i>nai</i> formation is one Tolkien used regularly, since he often included best wishes in Quenya when writing letters to others. Most of the examples above are drawn directly from Tolkien, with some adjustments to fit the vocabulary of this course. One of the examples, “may God bless you”, was originally written <i>nai Eru tye mánata</i> (PE17/75). I’ve rewritten it as <i>nai Eru mantëa tye</i>, because the original uses two constructs we haven’t talked about yet: direct object pronouns (<i>tye</i>) that precede the verb (discussed in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>) and an archaic present tense <i>mánata</i> “is blessing” of talat-stem verbs (discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>).</p>
+<p><a id="c3-4-3-1"></a><b>3.4.3.1 How do we know this?</b> As with the discussion on imperatives, the above draws on several sources, but is based largely on an article on “Five Late Quenya Volitive Inscriptions” written by Carl Hostetter in 2007 where the <i>nai</i> construction was described by Hostetter in detail (VT49/38-48). This <i>nai</i> formation is one Tolkien used regularly, since he often included best wishes in Quenya when writing letters to others. Most of the examples above are drawn directly from Tolkien, with some adjustments to fit the vocabulary of this course. One of the examples, “may God bless you”, was originally written <i>nai Eru tye mánata</i> (PE17/75). I’ve rewritten it as <i>nai Eru mantëa tye</i>, because the original uses two constructs we haven’t talked about yet: direct object pronouns (<i>tye</i>) that precede the verb (discussed in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>) and an archaic present tense <i>mánata</i> “is blessing” of talat-stem verbs (discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>).</p>
 </div>
 
 <h2><a id="c3-4-4"></a>3.4.4 Vocabulary: Directions and Times</h2>
@@ -873,7 +873,7 @@
 <ul><li><i>pa.t.</i> <b>cennë</b> “saw”</li></ul></li>
 <li><b>enar</b> <i>n.</i> “tomorrow”</li>
 <li><b>lómë</b> <i>n.</i> “night” ¹</li>
-<li><b>noa</b> <i>n.</i> “yesterday”</li>
+<li><b>nöa</b> <i>n.</i> “yesterday”</li>
 <li><b>ré</b> <i>n.</i> “day (24 hours)” ¹</li>
 <li><b>síra</b> <i>n.</i> “today”</li>
 <li><b>undómë</b> <i>n.</i> “twilight, dusk”</li>
@@ -937,7 +937,7 @@
 <p>Translate the following from Quenya to English:</p>
 
 <ol class="exercise-list">
-<li><i>Á tulë i taurenna lúmësse andúneo.</i></li>
+<li><i>Á tulë i taurenna lúmessë andúnëo.</i></li>
 <li><i>Cenuvan amillenya enar.</i></li>
 <li><i>Merin serë lómessë.</i></li>
 <li><i>Isil oryuva amba rómenessë.</i></li>
@@ -972,10 +972,10 @@
 <ol class="exercise-list" start="7">
 <li><i>Nai ambarónë lauca len (ná).</i></li>
 <li><i>I oron haiya mal cenuvalves arinessë.</i></li>
-<li><i>Á harë ré rottossë.</i></li>
+<li><i>Á harë ré i rottossë.</i></li>
 <li><i>Isil menuva undu númenessë.</i></li>
 <li><i>Anar calë auressë.</i></li>
-<li><i>Túlen mindonenna noa.</i></li>
+<li><i>Túlen mindonenna nöa.</i></li>
 </ol>
 
 <p>Tengwar answers:</p>
@@ -983,10 +983,10 @@
 <ol class="exercise-list tengwar-block" start="7">
 <li><span class="transcribe" data-lang="q" data-value="Nai ambarónë lauca len">Nai ambarónë lauca len</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I oron haiya mal cenuvalves arinessë">I oron haiya mal cenuvalves arinessë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Á harë ré rottossë">Á harë ré rottossë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Á harë ré i rottossë">Á harë ré i rottossë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Iþil menuva undu númenessë">Iþil menuva undu númenessë</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Anar calë auressë">Anar calë auressë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Túlen mindonenna noa">Túlen mindonenna noa</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Túlen mindonenna nöa">Túlen mindonenna nöa</span></li>
 </ol>
 
 <h1><a id="c3-5"></a>3.5 Guided Reading: Namárië</h1>
@@ -1099,7 +1099,7 @@ Maybe even thou shalt find it. Farewell!
 <ul class="vocab-list">
 <li><b>lairë</b> <i>n.</i> “poem”</li>
 <li><b>lilta-</b> <i>v.</i> “to dance”
-<ul><li><i>pa.t.</i> *<b>liltanë</b> “dance”</li></ul></li>
+<ul><li><i>pa.t.</i> *<b>liltanë</b> “danced”</li></ul></li>
 <li><b>lindalë</b> <i>n.</i> “music”</li>
 <li><b>lindo</b> <i>n.</i> “singer”</li>
 <li><b>lir-</b> <i>v.</i> “to sing”
@@ -1147,7 +1147,7 @@ Maybe even thou shalt find it. Farewell!
 <li><b>arin</b> <i>n.</i> “morning”</li>
 <li><b>enar</b> <i>n.</i> “tomorrow”</li>
 <li><b>lómë</b> <i>n.</i> “night” ¹</li>
-<li><b>noa</b> <i>n.</i> “yesterday”</li>
+<li><b>nöa</b> <i>n.</i> “yesterday”</li>
 <li><b>ré</b> <i>n.</i> “day (24 hours)” ¹</li>
 <li><b>síra</b> <i>n.</i> “today”</li>
 <li><b>undómë</b> <i>n.</i> “twilight, dusk”</li>
@@ -1211,7 +1211,7 @@ Maybe even thou shalt find it. Farewell!
 <ul>
 <li>Note ¹: <i>alassëa</i> “happy” is marked with a ! because technically it is a neologism (fan-invented word) derived from the noun <i>alassë</i> “happiness”, but it is so widely used that almost everyone who writes in Quenya would recognize it.</li>
 <li>Note ²: The verb <i>anta-</i> can mean both “give (a thing to someone)” and “present (someone with a thing)”. For the first meaning it uses the dative case for the person being given the thing (<i>i atan anta parma i eldan</i>) and for the second meaning it uses the instrumental case for the thing being presented to the person (<i>i atan anta i elda parmanen</i>).</li>
-<li>Note ³: The Quenya verb <i>car-</i> means both “do” and “make”. By itself or with an abstract object, it generally means “do” as in <i>ma carelyë</i> “what did you do?”, <i>carnenyes</i> “I did it”. Like English “do”, it is a sort of “generic action verb”, indicating an action while being vague as to what that action actually is. When paired with a more concrete noun, however, it has the sense “make” as in <i>carë cirya</i> “make a ship” or <i>carë ohta</i> “make war”.</li>
+<li>Note ³: The Quenya verb <i>car-</i> means both “do” and “make”. By itself or with an abstract object, it generally means “do” as in <i>ma cáralyë</i> “what are you doing?”, <i>carnenyes</i> “I did it”. Like English “do”, it is a sort of “generic action verb”, indicating an action while being vague as to what that action actually is. When paired with a more concrete noun, however, it has the sense “make” as in <i>carë cirya</i> “make a ship” or <i>carë ohta</i> “make war”.</li>
 <li>Note ⁴: The verb <i>hir-</i> “find” differs from the verb <i>tuv-</i> “discover” (introduced in <a href="eldamo-intro-quenya-01.html#c1-2-2">Chapter 1, section §1.2.2</a>) in that <i>hir-</i> refers to finding things that were previously known but are now lost. The verb <i>tuv-</i> refers to finding things previously unknown, as was the case when Aragorn found the White Tree of Gondor: <i>utúvienyes</i> “I have found it” (<i>The Lord of the Rings</i>, Book 6, Chapter 5: The Steward and the King). Thus <i>hir-</i> “find” vs. <i>tuv-</i> “discover” is a good way to translate these two Quenya verbs into English.</li>
 
 </ul>
@@ -1225,7 +1225,7 @@ Maybe even thou shalt find it. Farewell!
 <li><b><a href="#c3-6-2-4">3.6.2.4 Future, Commands and Wishes Summary</a></b></li>
 </ul>
 
-<p><b><a id="c3-6-2-1"></a>3.6.2.1 Consonant Pronunciation Summary:</b> Quenya consonants are mostly pronounced like in English, except:</p>
+<p><a id="c3-6-2-1"></a><b>3.6.2.1 Consonant Pronunciation Summary:</b> Quenya consonants are mostly pronounced like in English, except:</p>
 
 <ul>
 <li><i>c</i> is always a “hard c” [k].</li>
@@ -1239,7 +1239,7 @@ Maybe even thou shalt find it. Farewell!
 </ul></li>
 </ul>
 
-<p><b><a id="c3-6-2-2"></a>3.6.2.2 Dative and Instrumental Basics:</b></p>
+<p><a id="c3-6-2-2"></a><b>3.6.2.2 Dative and Instrumental Basics:</b></p>
 
 <ul>
 <li><b>Dative:</b> Dative is used for the indirect object of a verb, with the suffix <i>-(e)n</i> in the singular, usually translated in English as “to” or “for”.<ul>
@@ -1251,7 +1251,7 @@ Maybe even thou shalt find it. Farewell!
 </ul></li>
 </ul>
 
-<p><b><a id="c3-6-2-3"></a>3.6.2.3 Pronoun Summary:</b></p>
+<p><a id="c3-6-2-3"></a><b>3.6.2.3 Pronoun Summary:</b></p>
 
 <center>
 <table>
@@ -1275,7 +1275,7 @@ Maybe even thou shalt find it. Farewell!
 <li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta, -lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
 </ul>
 
-<p><b><a id="c3-6-2-4"></a>3.6.2.4 Future, Commands and Wishes Summary:</b></p>
+<p><a id="c3-6-2-4"></a><b>3.6.2.4 Future, Commands and Wishes Summary:</b></p>
 
 <ul>
 <li><b>Future Tense:</b> The future tense describes events occurring in the future and uses the suffix <i>-uva</i>.
